--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,27 +12,34 @@
     --main-color: rgba(254,235,19,255);
     --text-color: #fff;
     --other-color: #212121;
-    --second-color: #d3d3d3;
+    --second-color: #e9d6d6;
     --bg-color: #111111;
 
     --big-font: 4.5rem;
     --h2-font: 2.5rem;
     --p-font: 1.1rem;
+    --font-size-generalG: 3rem;
+    --font-size-generalM: 2rem;
+    --font-size-generalP: 1rem;
 
 }
 
 
 /*Body*/
 
+html {
+    scroll-padding-top: 100px; /* Ajusta este valor según sea necesario */
+}
+
 body{
     background-color: var(--bg-color);
     color: var(--text-color);
 }
 
-
 header{
     position: fixed;
     width: 100%;
+    height: auto;
     right: 0;
     z-index: 1000;
     display: flex;
@@ -117,22 +124,22 @@ header{
 }
 
 .nav-icons i:hover{
-    /*transform: scale(1.1);*/
     color: var(--text-color);
 }
 
 header.sticky{
     padding: 1.3rem 1rem;
+    margin-top: 0;
     background: var(--other-color);
 }
 
 /*home*/
+
 section{
     padding: 10rem 14% 20px;  
 }
 
 .home{
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,10 +151,9 @@ section{
 }
 
 .home-text h1{
-    font-size: var(--big-font);
+    font-size: var(--font-size-generalG);
     font-weight: 500;
     line-height: 1.3;
-    margin-bottom: 3rem;
 }
 
 span{
@@ -195,6 +201,131 @@ span{
     box-shadow: var(--main-color) 0px 1px 25px;
 }
 
+
+/*menu*/
+.menu{
+    padding-top: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.middle-text{
+    text-align: center; 
+}
+
+.middle-text h4{
+    font-size: 1.5rem;
+    font-weight: 0;
+    margin-bottom: 10px;
+    color: var(--main-color);
+
+}
+
+.middle-text h2{
+    font-size: var(--h2-font);
+}
+
+.small-letters{
+    font-size: 1.2rem;
+    font-weight: 0;
+    color: var(--second-color);
+}
+
+.menu-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3rem;
+    margin-top: 2rem;
+    transition: all 0.50s ease;
+}
+
+.menu-content > * {
+    flex: 1 1 20.75rem; 
+    max-width: 20.75rem; 
+    height: 28.5rem; 
+    box-sizing: border-box;
+    box-shadow: 2px 2px 8px 0 var(--main-color), 
+                4px 4px 16px 0 #d66, 
+                0px 0px 24px 2px var(--main-color);
+    overflow: hidden; 
+}
+
+.row {
+    position: relative;
+    background: var(--other-color);
+    border-radius: 3rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.row::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); 
+    opacity: 0;
+    transition: opacity .50s ease;
+}
+
+.row img {
+    width: 100%;
+    height: 100%;
+    transition: transform .50s ease, filter .50s ease;
+}
+
+.row img.blurred {
+    filter: blur(1rem);
+    opacity: 0.3; /* Ajusta la opacidad de la imagen */
+}
+
+
+
+.text-content {
+    position: absolute;
+    top: 0; 
+    left: 50%;
+    transform: translate(-50%, 0); 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    height: 100%; 
+    text-align: center;
+    color: var(--text-color);
+    opacity: 0;
+    transition: opacity .50s ease;
+}
+
+.text-content.visible {
+    opacity: 1;
+}
+
+.text-content h3 {
+    margin-top: 2rem; 
+    color: var(--main-color);
+    font-size: var(--font-size-generalM);
+}
+
+.text-content p {
+    margin: auto 0; 
+    color: var(--text-color);
+    font-size: var(--p-font);
+}
+
+.text-content h6 {
+    margin-bottom: 3rem; 
+    color: var(--main-color);
+    font-size: 1.2rem;
+}
+
+.row-btn{
+    text-align: center;
+    margin-top: 2rem;
+}
+
+
 /*about*/
 .about{
     display: flex;
@@ -239,182 +370,63 @@ span{
     color: var(--second-color);
     font-size: var(--p-font);
     line-height: 30px;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 
 }
 
-
 /*container*/
 .container {
-    margin-top: 0px;
-    padding: 30px 14% 70px;
+    padding: 20px 10% 1rem;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center; 
-    gap: 2rem; 
+    gap: 1rem; 
     text-align: center; 
 }
 
 .container > * {
-    flex: 1 1 300px;
-    max-width: 300px; 
+    flex: 1 1 150px; 
     box-sizing: border-box; 
 }
 
-.container-box{
-    padding: 10px 10px 10px 10px;
+.container-box {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    padding: 8px 8px 8px 8px; 
     background: var(--other-color);
-    border-radius: 3rem;
-    box-shadow: 2px 2px 8px 0 var(--main-color), 4px 4px, 0px 0px 24px 2px var(--main-color);
-
+    border-radius: 2rem; 
+    box-shadow: 1px 1px 4px 0 var(--main-color), 2px 2px, 0px 0px 12px 1px var(--main-color); 
 }
 
-.container-box i{
+.container-box i {
     vertical-align: bottom;
-    font-size:  80px;
+    font-size: 2rem; 
     color: var(--main-color);
 }
 
-.container-box h3{
-    font-size: 21px;
+.container-box h3 {
+    font-size: var(--font-size-generalP); 
     font-weight: bold;
-    margin: 16px 0;
+    margin: 12px 0; 
     color: var(--text-color);
-    
 }
 
-.container-box p{
+.container-box p {
     color: var(--second-color);
-    font-size: var(--p-font);
-    letter-spacing: 1px;
+    font-size: var(--font-size-generalP); 
     transition: all .50s ease;
 }
 
-.container-box p:hover{
-    color:var(--main-color)
-}
-
-
-/*menu*/
-.menu{
-    padding-top: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-.middle-text{
-    text-align: center; 
-}
-
-.middle-text h4{
-    font-size: 1.9rem;
-    font-weight: 700;
-    margin-bottom: 10px;
+.container-box p:hover {
     color: var(--main-color);
-
-}
-
-.middle-text h2{
-    font-size: var(--h2-font);
-}
-
-.menu-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 3rem;
-    margin-top: 4rem;
-}
-
-.menu-content > * {
-    flex: 1 1 400px; 
-    max-width: 400px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 8px 0 var(--main-color), 4px 4px 16px 0 #d66, 0px 0px 24px 2px var(--main-color);
-
-}
-
-
-
-
-.row{
-    position: relative;
-    padding: 10px 35px 40px;
-    background: var(--other-color);
-    border-radius: 3rem;
-}
-
-.row img{
-    padding: 20px 5px;
-    width: 100%;
-    height: auto;
-    transition: transform .50s ease;
-    cursor: pointer;
-    border-radius: 50px;
-    
-}
-
-.row img:hover{
-    transform: scale(1.1);
-}
-
-.row h3{
-    font-size: 18px;
-    margin-bottom: 5px;
-    font-weight: 700;
-}
-
-.row p{
-    color: var(--second-color);
-    font-size: var(--p-font);
-    line-height: 30px;
-    margin-bottom: 1.1rem;
-}
-
-.in-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-}
-
-
-
-.in-text .price h6{
-    font-size: 17px;
-    color: var(--main-color);
-    font-weight: 600;
-}
-
-
-
-.in-text .s-btnn a{
-    display: inline-block;
-    padding: 9px 23px;
-    background: var(--bg-color);
-    color: var(--main-color);
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    border-radius: 3rem;
-    transition: all .50s ease;
-}
-
-.in-text .s-btnn a:hover{
-    background: var(--main-color);
-    color: var(--bg-color);
-    box-shadow: var(--main-color) 0px 1px 25px;
-
-}
-
-.row-btn{
-    text-align: center;
-    margin-top: 6rem;
 }
 
 /*reviews*/
 
 .review{
-    padding-top: 2rem;
+    padding: 1rem 2rem 2rem;
 }
 .review-content {
     display: flex;
@@ -480,42 +492,74 @@ span{
 
 }
 
-/*contact*/
-.contact{
-    padding-top: 2rem;
+/*footer*/
+
+footer {
+    background-color: var(--other-color);
+    padding: 1px 1.3rem;
 }
-.contact-content{
+
+.contact {
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
     flex-direction: column;
-
+    padding: 0;
+    margin: 1rem;
 }
 
-.contact-text{
-    display: flex;
-    align-items: center;
+.contact-horizontal {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: space-between;
+    align-items: start;
     text-align: center;
+    gap: 1.3rem;
+    margin: 0;
+    padding: 1rem;
+}
+
+
+.contact-horizontal h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: var(--main-color);
+}
+
+.contact-text, .hours-operation {
+    display: flex;
+    align-items: flex-start; 
+    text-align: left;
     flex-wrap: wrap;
     flex-direction: column;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
+
 }
 
-.contact-text h2{
-    font-size: var(--h2-font);
-    margin-bottom: 10px;
-}
 
-.contact-text p{
+.contact-text, .hours-operation p {
     color: var(--second-color);
     font-size: var(--p-font);
     max-width: 950px;
     line-height: 30px;
-    margin-bottom: 3rem;
-
+    margin: 0;
+    gap: 1rem;
 }
 
-.social i{
+.hours-operation p{
+    font-size: 1.2rem;
+}
+
+.contact-text i, a {
+    font-size: 20px;
+    color: var(--second-color);
+}
+
+
+.social {
+    display: flex;
+    justify-content: center;
+}
+
+.social i {
     display: inline-block;
     font-size: 32px;
     color: var(--second-color);
@@ -523,19 +567,20 @@ span{
     transition: all .50s ease;
 }
 
-.social i:hover{
+.social i:hover {
     color: var(--main-color);
 }
+
 
 .scroll{
     position: fixed;
     bottom: 2.2rem;
     border-top: 2rem;
-    right: 3.2rem;
+    right: 2rem;
 }
 
 .scroll i{
-    font-size: 22px;
+    font-size: 2rem;
     color: var(--text-color);
     background: var(--main-color);
     padding: 10px;
@@ -564,6 +609,7 @@ span{
     .container{
         padding: 30px 4% 50px;
     }
+
 }
 
 @media (max-width: 1180px){
@@ -605,6 +651,7 @@ span{
     .navlist.open{
         top: 100%;
     }
+
 }
 
 @media (max-width: 1045px){
@@ -612,14 +659,15 @@ span{
         --big-font: 3.3rem;
         --h2-font: 2rem;  
     }
+
 }
 
 
 
 @media (max-width: 475px){
     :root{
-        --big-font: 2.8rem;
-        --h2-font: 2rem;  
+        --big-font: 2rem;
+        --h2-font: 1.9rem;  
     }
 
     .nav-icons {
@@ -632,4 +680,10 @@ span{
     .logo-text {
         display: none; 
     }
+
+    .home-text h1{
+        font-size: 1.7rem;
+    }
+
+ 
 }
